test/integration/good/tuples/tuple_temporary.stan
generated quantities {
  matrix[1,1] m = [[1.5]];
  tuple(real, matrix[1,1]) t =
      (1.2, m * 2.0);
 }
