test/integration/bad/missing_dist_suffix/no_rng_suffix.stan
generated quantities {
   real x = multi_gp_cholesky_rng([[0,0],[0,0]], [1,0]);
}